# C.Origami

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
dependencies/: requirements.train.txt
examples/: deletion.sh  prediction.sh  screen.sh
src/: .gitignore
src/corigami/: .gitignore
src/corigami/data/: chromosome_dataset.py  data_feature.py  genome_dataset.py
src/corigami/examples/: deletion.sh  prediction.sh  screen.sh
src/corigami/inference/: editing.py  prediction.py  screening.py
src/corigami/inference/utils/: inference_utils.py  model_utils.py  plot_utils.py
src/corigami/inference/utils/metrics/: insulation_score.py  metrics.py
src/corigami/model/: blocks.py  corigami_models.py
src/corigami/preprocessing/: README.md  cool2npy.py
src/corigami/preprocessing/atac/: atac_pipeline.sh  rep1-end1.txt  rep1-end2.txt  rep2-end1.txt  rep2-end2.txt
src/corigami/preprocessing/ctcf/: ctcf_input.txt  ctcf_ip.txt  ctcf_norm.sh  ctcf_pipeline.sh
src/corigami/training/: main.py
