[project]
name = 'corigami'
version = '0.0.1'
description = 'C.Origami: cell type-specific chromatin structure prediction.'
readme = 'README.md'
keywords = ['deep learning', 'chromatin', 'prediction', 'cell type-specific', 'epigenetics']
authors = [{ name = 'Jimin Tan', email = 'tanjimin@nyu.edu' },
           { name = 'Nina Shenker-Tauris', email = 'shenkn01@nyu.edu' }]
maintainers = [{ name = 'Jimin Tan', email = 'tanjimin@nyu.edu' },
               { name = 'Nina Shenker-Tauris', email = 'shenkn01@nyu.edu' }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'torch>=1.12.0',
    'pandas>=1.3.0',
    'matplotlib>=3.3.2',
    'omegaconf>=2.1.1',
    'tqdm>=4.64.0',
    'pybigwig==0.3.18',
]
requires-python = ">=3.9"

[project.optional-dependencies]
training = [
    'pytorch-lightning==1.5.8',
    'lightning-bolts==0.5.0',
    'scikit-image>=0.19.3',
]

[project.urls]
Homepage = 'https://github.com/tanjimin/C.Origami'
Repository = 'https://github.com/tanjimin/C.Origami'

[project.scripts]
corigami-predict = 'corigami.inference.prediction:main'
corigami-edit = 'corigami.inference.editing:main'
corigami-screen = 'corigami.inference.screening:main'
corigami-train= 'corigami.training.main:main'

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

