[metadata]
name = c_origami
version = 0.2.0
author = Jimin Tan & Nina Shenker-Tauris 
author_email = tanjimin@nyu.edu nina.shenker-tauris@nyulangone.org
description = C.Origami framework: cell type specific 3D chromatin architecture prediction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanjimin/C.Origami
project_urls =
    Bug Tracker = https://github.com/tanjimin/C.Origami/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
package_dir =
  = src
zip_safe = True
install_requires = file: dependencies/requirements.base.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  prediction = corigami.inference.prediction:main
  editing = corigami.inference.editing:main
  screening = corigami.inference.screening:main

[options.extras_require]
train = file: dependencies/requirements.train.txt
