[metadata]
name = corigami-test
version = 0.0.1
author = Jimin Tan & Nina Shenker-Tauris 
author_email = tanjimin@nyu.edu
description = C.Origami framework: cell type specific 3D chromatin architecture prediction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanjimin/C.Origami
project_urls =
    Bug Tracker = https://github.com/tanjimin/C.Origami/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
install_requires = 
    torch>=1.12.0
    pandas>=1.3.0
    matplotlib>=3.3.2
    pybigwig>=0.3.18
    omegaconf>=2.1.1
    tqdm>=4.64.0
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
include = corigami, corigami.*

[options.entry_points]
console_scripts =
  corigami-predict = corigami.inference.prediction:main
  corigami-edit = corigami.inference.editing:main
  corigami-screen = corigami.inference.screening:main

[options.extras_require]
train = 
    pytorch_lightning>=1.7.3
    torchvision>=0.13.0
